--- a/pillowfight-data-loader.yaml
+++ b/pillowfight-data-loader.yaml
@@ -10,8 +10,7 @@ spec:
       containers:
       - name: pillowfight
         image: sequoiatools/pillowfight:v5.0.1
-        command: [“cbc-pillowfight”,
-                  “-U”, “couchbase://demo-cluster/couchbase-demo-cluster?select_bucket=true”,
-                  “-I”, “10000”, “-B”, “100”, “-c”, “-1”, “--num-threads”, “15”, “-u”, “Administrator”, “-P”, “password”,“-v”,
-                  “-D”,“unsafe_optimize=true”,“-D”,“timeout=0.01"]
+        command: ["cbc-pillowfight",
+                  "-U", "couchbase://cb-example-srv/default?select_bucket=true",
+                  "-I", "10000", "-B", "1000", "-c", "10", "-t", "1", "-u", "Administrator", "-P", "password"]
       restartPolicy: Never
