--- a/pillowfight-data-loader.yaml
+++ b/pillowfight-data-loader.yaml
@@ -9,8 +9,9 @@ spec:
     spec:
       containers:
       - name: pillowfight
-        image: sequoiatools/pillowfight:v5.0.1
+        image: sequoiatools/pillowfight:6.5
         command: ["cbc-pillowfight",
-                  "-U", "couchbase://cb-example-srv/default?select_bucket=true",
-                  "-I", "10000", "-B", "1000", "-c", "10", "-t", "1", "-u", "Administrator", "-P", "password"]
+                  "-U", "couchbase://cb-example-srv/couchbaseDemo?select_bucket=true",
+                  "-I", "10000", "-B", "100", "-c", "-1", "--num-threads", "15", "-u", "Administrator", "-P", "password","-v",
+                  "-D","unsafe_optimize=true","-D","timeout=0.01"]
       restartPolicy: Never
