--- a/couchbase-cluster-xdcr.yml
+++ b/couchbase-cluster-xdcr.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cb-example-xdcr-auth
+  name: cb-example-auth
 type: Opaque
 data:
   username: QWRtaW5pc3RyYXRvcg== # Administrator
@@ -10,11 +10,28 @@ data:
 apiVersion: couchbase.com/v2
 kind: CouchbaseBucket
 metadata:
-  name: my-bucket-xdcr
+  name: my-bucket
   labels:
     cluster: cb-example-xdcr
 spec:
   name: couchbaseDemo
+  memoryQuota: 512Mi
+  replicas: 1
+  ioPriority: low
+  evictionPolicy: valueOnly
+  conflictResolution: seqno
+  enableFlush: true
+  minimumDurability: none
+---
+
+apiVersion: couchbase.com/v2
+kind: CouchbaseBucket
+metadata:
+  name: my-perf-bucket
+  labels:
+    cluster: cb-example
+spec:
+  name: default
   memoryQuota: 100Mi
   replicas: 1
   ioPriority: low
@@ -22,25 +39,24 @@ spec:
   conflictResolution: seqno
   enableFlush: true
   minimumDurability: none
-
 ---
 apiVersion: couchbase.com/v2
 kind: CouchbaseCluster
 metadata:
-  name: cb-example-xdcr
+  name: cb-example
 spec:
   #image: couchbase/server:6.6.0
   image: couchbase/server:7.0.0
   security:
-    adminSecret: cb-example-xdcr-auth
+    adminSecret: cb-example-auth
   buckets:
     managed: true
     selector:
       matchLabels:
         cluster: cb-example-xdcr
   cluster:
-    clusterName: london-cluster
-    dataServiceMemoryQuota: 1024Mi
+    clusterName: paris-cluster
+    dataServiceMemoryQuota: 2048Mi
     indexServiceMemoryQuota: 256Mi
     searchServiceMemoryQuota: 256Mi
     eventingServiceMemoryQuota: 256Mi
@@ -55,3 +71,8 @@ spec:
     name: server
     services:
     - data
+  - size: 2
+    name: query_index
+    services:
+    - index
+    - query
